turtleart.circletwo.CircleTwo.scala.error
Erreur de compilation :
CircleTwo:3: error: not found: value cerle
  cerle(100)
  ^