turtleart.circletwo.CircleTwo.scala.code
override def run() {
  cercle(50)
  cerle(100)
}